--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -3,34 +3,23 @@
     <head>
         <meta charset="utf-8"/>
         <title>Slim 3</title>
-        <link href='//fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
-        <style>
-            body {
-                margin: 50px 0 0 0;
-                padding: 0;
-                width: 100%;
-                font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-                text-align: center;
-                color: #aaa;
-                font-size: 18px;
-            }
-
-            h1 {
-                color: #719e40;
-                letter-spacing: -3px;
-                font-family: 'Lato', sans-serif;
-                font-size: 100px;
-                font-weight: 200;
-                margin-bottom: 0;
-            }
-        </style>
+        <link href="css/normalise.css" rel="stylesheet" type="text/css">
+        <link href="css/style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <h1>Slim</h1>
-        <div>a microframework for PHP</div>
+        <h1>Todo</h1>
+        <div>
+            <h2>Add Task:</h2>
+            <form action="/" method="post">
+                <input type="text" name="task-entry" placeholder="enter task...">
+                <input type="submit" value="Add">
+            </form>
+        </div>
 
-        <?php if (isset($name)) : ?>
-            <h2>Hello <?= htmlspecialchars($name); ?>!</h2>
+        <?php if (isset($tasks)) : ?>
+            <?php foreach($tasks as $task){
+               var_dump($task);
+            }?>
         <?php else: ?>
             <p>Try <a href="http://www.slimframework.com">SlimFramework</a></p>
         <?php endif; ?>
