Added feature to put items into database.

--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -10,7 +10,7 @@
         <h1>Todo</h1>
         <div>
             <h2>Add Task:</h2>
-            <form action="/" method="post">
+            <form action="/addToDo" method="post">
                 <input type="text" name="task-entry" placeholder="enter task...">
                 <input type="submit" value="Add">
             </form>
