--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,3 +2,8 @@
     box-sizing: border-box;
     font-family: "Helvetica Neue";
 }
+.task{
+    display: flex;
+    justify-content: space-between;
+    width: 50%;
+}
